{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 6,
  "lineage": "5993eda0-1744-0203-dcce-248a5460f2f8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-08-02T16:39:18.206-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/curt-demo-project/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "curt-demo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-02T16:39:18.316-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/curt-demo-project/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "curt-demo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/global/firewalls/allow-ssh",
            "source_ranges": [
              "23.118.24.219/32",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kali_attacker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/global/images/kali-custom-image",
                    "size": 81,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/zones/us-central1-a/disks/kali-desktop-linux-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/curt-demo-project/zones/us-central1-a/instances/kali-desktop-linux-vm",
            "instance_id": "7568416442375262429",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDgs5VauqCVvcLJ9KCLK3S+clXGvu9hOKTHCzuUejGLV4Xk3onwj5OeJp1HX5VmLZnLGsKof9cer7mCkviE1D2fU1WA7fWp+ZgPw01BCWe3V7FuzVGThUXrWwETPiW5wv8x0GeljshAp8kz83S970ldoWY568rWB4upblpHXSSjePMw0bCNf3fYUi4agNMRbAOTUEW09gxJ7ZtgrxihWeHs4o1rt+qsLJozvS//zLdM3DuCUOqgnD+Nu+XVyYzzbIKRxWrthngdygicEHKcbCQCQTHD8wVP0jS4/MiuIc9J7vevq+LYQnbg5TrWBl0bFpogGSpKPWYVUdb6+gnQ6WNapI3PKsWEq9s3hFzODLYY/+7I/JD8DX3PYtIPebXOFgXOY/0TRtUl5u9wWZDBEh4818unlmJQKUp+jNMCrx8ixv [...]
            },
            "metadata_fingerprint": "QispP5IAajY=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt update -y\nsudo apt upgrade -y\nsudo apt install -y openssh-server\nsudo systemctl enable ssh\nsudo systemctl start ssh\n",
            "name": "kali-desktop-linux-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.226.95.215",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/global/networks/my-vpc-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/regions/us-central1/subnetworks/test-subnetwork",
                "subnetwork_project": "curt-demo-project"
              }
            ],
            "project": "curt-demo-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/zones/us-central1-a/instances/kali-desktop-linux-vm",
            "service_account": [
              {
                "email": "cs-service-acct@curt-demo-project.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "http-server",
              "rdp-server"
            ],
            "tags_fingerprint": "VXKASZB3soE=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ubuntu_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/curt-demo-project/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "curt-demo-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/global/networks/my-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-02T16:39:18.333-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/curt-demo-project/regions/us-central1/subnetworks/test-subnetwork",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "test-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "curt-demo-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/curt-demo-project/regions/us-central1/subnetworks/test-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}